# nabla-site-python

./: .ansible-lint  .checkov.yml  .coveragerc  .cspell.json  .cz.yaml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .gitlint  .golangci.yml  .hadolint.yaml  .mega-linter.yml  .npmrc  .opencommit-commitlint  .pre-commit-config.yaml  .pylintrc  .releaserc.yaml  .ruff.toml  .secretlintignore  .tflint.hcl  .tfsecignore  .vercelignore  .vercelignore-TODO  .yamllint.yml  CHANGELOG.md  Makefile  README.md  main.py  mise.dev.toml  mise.toml  package-lock.json  package.json  pyproject.toml  pyproject.toml-SAV  requirements.txt  (+4 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: copilot.agent.md
.github/instructions/: documentation.instructions.md  github-actions-ci-cd-best-practices.instructions.md  terraform.instructions.md
.github/workflows/: cloudflare-wrangler.yml  codeql.yml  linter.yml  opencommit.yml  pylint.yml  python.yml  pythonpublish.yml  release.yml  renovate.yml  test-specific.yml  tests.yml
api/: main.py
docs/: WORKERS_PACKAGE.md
scripts/: _cli.sh  run-install.sh  step-0-color.sh  step-1-os.sh
