[project]
name = "nabla-site-python"
version = "1.0.0"
description = "Sample FastAPI Hello World for Vercel and Cloudflare deployment"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
build = ["setuptools", "cython"]
toml = ["tomli; python_version < '3.11'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

# TODO https://vercel.com/docs/functions/runtimes/python
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "webtypy>=0.1.7",
    "markupsafe",
    "jinja2",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "distro>=1.9.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    # "jiter>=0.11.1",
    "openai>=2.6.0",
    "pydantic>=2.12.3",
    "pydantic_core>=2.41.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
    "starlette>=0.48.0",
    "tqdm>=4.67.1",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.38.0",
    "vercel>=0.3.2",
    "vercel-sandbox>=0.0.2",
    "vercel-sdk>=0.0.8",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pre-commit>=4.5.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]

[tool.vercel.scripts]
build = "uv sync"

[project.scripts]
app = "api:main"
